--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -7,28 +7,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="0.1">
+        android:layout_weight="0.1"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/Name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPersonName"
             android:text="Name"
-            android:textSize="24sp"
-            android:inputType="textPersonName"/>
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/Phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="phone"
-            android:text="Phone"/>
+            android:text="Phone" />
     </LinearLayout>
+
     <CheckBox
         android:id="@+id/taken"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
-        android:layout_weight="0.90"/>
+        android:layout_weight="0.90" />
 </LinearLayout>
